# Particle_tracking_deeplearning

./: .gitignore  requirements.txt
Analysis/: Analysis_merged_code.py  Detection_to_csv.py  Detection_to_csv_final.py  correcting_to_final_csv.py  crystal_straucture.py  html_clicker.py  radial_density.py
Analysis/Analysis_on_images/: Analysis_main.py  avg_profile_real_cluster_area.csv  avg_profile_real_full_circle.csv  avg_profile_theo_cluster_area.csv  avg_profile_theo_full_circle.csv  coordination_number.py  loading_image.py  order_parameter.py  radial_density.py  vor_par_with_centers.py  voronoi_orderparameter_overlay.py
Analysis/Cluster growth/: cluster_growth.py
Analysis/Coordination_number/: Coordination_number.py
Analysis/Detection_to_csv/: Centering_detections.py  Centering_manual_corrections.py  removing.py  (+7 more)
Analysis/zooi/: Hydrazine_010_psi3_zoom.html  label_missing_particles.html  order_par_with_cutoff.py  pyproject.toml  yolo_tracks.csv  zooi.py
Inference/: Inference.py
Previous code/: Target_image.py
Training_data_generation_pentagons/: Yolo_export.py  main_multi_process.py
Training_data_generation_triangles/: Image_sim_tes.ipynb  Image_simulation(main).py  Modeltraining.py  Rotations.py  Testing.py  Yolo_export.py  cropping_images.py  custom_DIC.py  main_multi_process.py  main_test_one.py
Training_data_generation_triangles_structured/: Modeltraining.py  Rotations.py  Yolo_export.py  main_multi_process.py  main_test_one.py
Training_of_model/: Modeltraining.py
one_code _to_rule_them_all/: Particle_class.py  one_code_to_rule_them_all.txt
(+35 files in other folders)
