[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "particle_tracking"
version = "0.1.0"
description = "Particle tracking deep learning project"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["Training_data_generation*"]